password reset domain and endopoints: request/confirm (#7)
